Fix margin collapse on small screens

--- a/src/styles/Shop.scss
+++ b/src/styles/Shop.scss
@@ -1,6 +1,6 @@
 .product-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: 1fr;
   gap: min(2.5rem, 15vw);
   align-items: top;
